# django-aceshigh

./: README.md  pyproject.toml
src/aceshigh/: admin.py  api_urls.py  api_views.py  apps.py  blocks.py  common.py  fields.py  forms.py  models.py  protocols.py  serializers.py  signals.py  urls.py  views.py  wagtail_hooks.py  widgets.py
src/aceshigh/fixtures/: snippets.json
src/aceshigh/migrations/: 0001_initial.py  0002_alter_editormodeprofile_unique_together.py  0003_alter_editormodeprofile_editor_css.py  0004_alter_editormodeprofile_unique_together.py  0005_alter_editormodeprofile_editor_css_and_more.py  0006_alter_editormodeprofile_user.py  0007_alter_editormodeprofile_editor_css_and_more.py
src/aceshigh/templates/aceshigh/: add_mode_profile.html  add_snippet.html  confirm_delete_mode_profile.html  (+7 more)
src/aceshigh/templatetags/: ace_editor_tags.py  aceshigh_tags.py
testsite/testapp/: admin.py  models.py  views.py
testsite/testapp/migrations/: 0001_initial.py  0002_yourmodel_code_yourmodel_description_yourmodel_name.py  0003_yourmodel_markdown_yourmodel_test.py
testsite/testapp/templates/: base.html  home.html
testsite/testsite/: asgi.py  settings.py  urls.py  wsgi.py
wagtailsite/: Dockerfile  manage.py
wagtailsite/home/: models.py  processors.py
wagtailsite/home/migrations/: 0003_mypage_homepage_content_homepage_css_content_and_more.py  0004_homepage_markdown_content_homepage_python_content_and_more.py
wagtailsite/wagtailsite/: urls.py  wsgi.py
wagtailsite/wagtailsite/settings/: base.py  dev.py
wagtailsite/wagtailsite/templates/: base.html
(+15 files in other folders)
